--- a/hr-worker/src/main/resources/application.properties
+++ b/hr-worker/src/main/resources/application.properties
@@ -1,1 +1,11 @@
+spring.h2.console.enabled:true
+spring.application.name=hr-worker
+server.port=8001
 
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.username=sa
+spring.datasource.password=
+
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
