--- a/hr-api-gateway-zuul/src/main/resources/application.properties
+++ b/hr-api-gateway-zuul/src/main/resources/application.properties
@@ -12,3 +12,6 @@ zuul.routes.worker.path=/workers/**
 
 zuul.routes.payroll.service-id=hr-payroll
 zuul.routes.payroll.path=/payroll/**
+
+zuul.routes.user.service-id=hr-user
+zuul.routes.user.path=/users/**
