--- a/hr-api-gateway-zuul/src/main/resources/application.properties
+++ b/hr-api-gateway-zuul/src/main/resources/application.properties
@@ -15,3 +15,6 @@ zuul.routes.payroll.path=/payroll/**
 
 zuul.routes.user.service-id=hr-user
 zuul.routes.user.path=/users/**
+
+zuul.routes.oauth.service-id=hr-oauth
+zuul.routes.oauth.path=/hr-oauth/**
