--- a/hr-user/src/main/resources/application.properties
+++ b/hr-user/src/main/resources/application.properties
@@ -1,4 +1,3 @@
-spring.h2.console.enabled:true
 spring.application.name=hr-user
 server.port=${PORT:0}
 eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
@@ -6,11 +5,16 @@ eureka.instance.instance-id=${spring.application.name}:${spring.application.inst
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 
 
+
+
+
 # Database configuration
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.username=sa
-spring.datasource.password=
+#spring.datasource.url=jdbc:h2:mem:testdb
+#spring.datasource.username=sa
+#spring.datasource.password=
 
+#spring.h2.console.enabled=true
+#spring.h2.console.path=/h2-console
 
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.format_sql=true
